// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel render it should render 1`] = `
.emotion-3 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-2 {
  box-sizing: border-box;
  display: block;
  margin-bottom: 0.125rem;
  padding-left: 0;
  padding-right: 0;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 0;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5rem;
  color: rgb(40,42,43);
  cursor: pointer;
}

<div
  className="emotion-3"
>
  <label
    className="emotion-2"
    display="block"
    htmlFor="input"
  >
    <span
      className="emotion-1"
      display="flex"
    >
      <span
        className="emotion-0"
        color="colorText"
        cursor="pointer"
        fontSize="fontSize30"
        fontWeight="fontWeightSemibold"
      >
        child
      </span>
    </span>
  </label>
</div>
`;

exports[`FormLabel render it should render with required 1`] = `
.emotion-6 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-5 {
  box-sizing: border-box;
  display: block;
  margin-bottom: 0.125rem;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 0;
}

.emotion-3 {
  margin: 0;
  padding: 0;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5rem;
  color: rgb(40,42,43);
  cursor: pointer;
}

.emotion-1 {
  margin: 0;
  padding: 0;
  line-height: 1.5rem;
  font-size: 0.875rem;
  color: rgb(40,42,43);
  display: block;
  width: 4px;
  height: 4px;
  margin-right: 0.25rem;
  background-color: rgb(222,88,88);
  border-radius: 50%;
  cursor: pointer;
}

.emotion-0 {
  position: absolute;
  margin: -1px;
  border: 0;
  padding: 0;
  width: 1px;
  height: 1px;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  text-transform: none;
  white-space: nowrap;
}

<div
  className="emotion-6"
>
  <label
    className="emotion-5"
    display="block"
    htmlFor="input"
  >
    <span
      className="emotion-4"
      display="flex"
    >
      <span
        className="emotion-1 emotion-2"
        color="colorText"
        fontSize="fontSize30"
      >
        <span
          className="emotion-0"
        >
          Required: 
        </span>
      </span>
      <span
        className="emotion-3"
        color="colorText"
        cursor="pointer"
        fontSize="fontSize30"
        fontWeight="fontWeightSemibold"
      >
        child
      </span>
    </span>
  </label>
</div>
`;
